--- a/wiki/ReflashBlinkM.wiki
+++ b/wiki/ReflashBlinkM.wiki
@@ -36,10 +36,12 @@ The BlinkM has to be wired up in a different manner than the way it normally is.
 NOTE: In order to make good electrical connection, you may need to press down on the BlinkM/MinM or otherwise ensure the connections or good during the reflashing process.  Otherwise the reflashing will fail.  (But don't worry, you can just try again)
 
 Wiring Diagrams:
+
 [http://www.flickr.com/photos/todbot/5189406314/ http://farm5.static.flickr.com/4112/5189406314_f79bab3814.jpg]
 [http://www.flickr.com/photos/todbot/5189406458/ http://farm5.static.flickr.com/4151/5189406458_01cc5c19f7.jpg]
 
 Suggested Physical layout:
+
 [http://www.flickr.com/photos/todbot/5189389248/ http://farm5.static.flickr.com/4151/5189389248_a93bcc9e5b.jpg]
 [http://www.flickr.com/photos/todbot/5189388534/ http://farm5.static.flickr.com/4152/5189388534_82448716a9.jpg]
 
@@ -62,9 +64,13 @@ If everything is connected correctly, you'll see a progression of messages telli
 If there is a problem, ReflashBlinkM will attempt to figure out what the problem is and give you a message suggesting a solution.
 
 Some error messages that can be encountered:
-* "Can't open serial device, try another" -- The serial port chosen apparently doesn't have an Arduino with ArduinoISP on it.
-* "Programmer not responding. ArduinoISP loaded?" -- An Arduino was detected but ArduinoISP doesn't seem to be loaded onto it.
-* "Prorammer not responding. Check connections" -- An Arduino with ArduinoISP is found, but the wiring to BlinkM is faulty or intermittent
-* "Verification error, bad wiring?" -- Programming worked for a while, but verify failed, usually indicating a loose connection
-* "No chip detected. Check connections" -- Another type of bad wiring error.
+  * "Can't open serial device, try another" -- The serial port chosen apparently doesn't have an Arduino with ArduinoISP on it.
+  * "Programmer not responding. ArduinoISP loaded?" -- An Arduino was detected but ArduinoISP doesn't seem to be loaded onto it.
+  * "Prorammer not responding. Check connections" -- An Arduino with ArduinoISP is found, but the wiring to BlinkM is faulty or intermittent
+  * "Verification error, bad wiring?" -- Programming worked for a while, but verify failed, usually indicating a loose connection
+  * "No chip detected. Check connections" -- Another type of bad wiring error.
 
+== Video of Reflashing ==
+Because the blue LED of BlinkMs is hooked up to one of the programming lines, it makes for a good visual indication that reflashing is working.  Below is a video of a BlinkM MinM being reflashed.
+
+<object type="application/x-shockwave-flash" width="400" height="300" data="http://www.flickr.com/apps/video/stewart.swf?v=71377" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"> <param name="flashvars" value="intl_lang=en-us&photo_secret=a7103e41cb&photo_id=5188786897"></param> <param name="movie" value="http://www.flickr.com/apps/video/stewart.swf?v=71377"></param> <param name="bgcolor" value="#000000"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="http://www.flickr.com/apps/video/stewart.swf?v=71377" bgcolor="#000000" allowfullscreen="true" flashvars="intl_lang=en-us&photo_secret=a7103e41cb&photo_id=5188786897" height="300" width="400"></embed></object>
