Edited wiki page ReflashBlinkM through web user interface.

--- a/wiki/ReflashBlinkM.wiki
+++ b/wiki/ReflashBlinkM.wiki
@@ -73,4 +73,4 @@ Some error messages that can be encountered:
 == Video of Reflashing ==
 Because the blue LED of BlinkMs is hooked up to one of the programming lines, it makes for a good visual indication that reflashing is working.  Below is a video of a BlinkM MinM being reflashed.
 
-<object type="application/x-shockwave-flash" width="400" height="300" data="http://www.flickr.com/apps/video/stewart.swf?v=71377" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"> <param name="flashvars" value="intl_lang=en-us&photo_secret=a7103e41cb&photo_id=5188786897"></param> <param name="movie" value="http://www.flickr.com/apps/video/stewart.swf?v=71377"></param> <param name="bgcolor" value="#000000"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="http://www.flickr.com/apps/video/stewart.swf?v=71377" bgcolor="#000000" allowfullscreen="true" flashvars="intl_lang=en-us&photo_secret=a7103e41cb&photo_id=5188786897" height="300" width="400"></embed></object>
+<wiki:video url="http://www.youtube.com/watch?v=3LkNlTNHZzE>
