--- a/wiki/ReflashBlinkM.wiki
+++ b/wiki/ReflashBlinkM.wiki
@@ -73,4 +73,4 @@ Some error messages that can be encountered:
 == Video of Reflashing ==
 Because the blue LED of BlinkMs is hooked up to one of the programming lines, it makes for a good visual indication that reflashing is working.  Below is a video of a BlinkM MinM being reflashed.
 
-<wiki:video url="http://www.youtube.com/watch?v=3LkNlTNHZzE>
+<wiki:video url="http://www.youtube.com/watch?v=PMBtjAPBdwI">
